--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,4 +8,7 @@ spring:
     url: jdbc:mysql://localhost:3306/score
     username: root
     password: password
-
+  data:
+    redis:
+      host: localhost
+      port: 6379
