--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,13 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+    implementation(platform("software.amazon.awssdk:bom:2.20.136"))
+    implementation("commons-io:commons-io:2.13.0")
+    implementation("software.amazon.awssdk:aws-core")
+    implementation("software.amazon.awssdk:sdk-core")
+    implementation("software.amazon.awssdk:sts")
+    implementation("software.amazon.awssdk:s3")
+
     runtimeOnly 'com.mysql:mysql-connector-j'
 
     compileOnly 'org.projectlombok:lombok'
@@ -36,6 +43,7 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:3.+'
     testImplementation 'org.testcontainers:testcontainers:1.19.0'
     testImplementation 'com.redis.testcontainers:testcontainers-redis-junit:1.6.4'
+    testImplementation 'org.testcontainers:localstack:1.19.0'
 }
 
 tasks.named('test') {
