--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,8 @@ dependencies {
     testImplementation 'org.testcontainers:testcontainers:1.19.0'
     testImplementation 'com.redis.testcontainers:testcontainers-redis-junit:1.6.4'
     testImplementation 'org.testcontainers:localstack:1.19.0'
-    testImplementation("org.testcontainers:kafka")
+    testImplementation 'org.testcontainers:kafka:1.19.0'
+    testImplementation 'org.springframework.kafka:spring-kafka-test'
 }
 
 tasks.named('test') {
