--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     testImplementation 'org.testcontainers:localstack:1.19.0'
     testImplementation 'org.testcontainers:kafka:1.19.0'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
+
+    testImplementation 'com.tngtech.archunit:archunit:1.1.0'
 }
 
 tasks.named('test') {
