--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ plugins {
      */
     id 'jacoco'
     id "org.sonarqube" version "4.0.0.2929"
+    id 'com.diffplug.spotless' version '6.21.0'
+
 }
 
 group = 'com.jyujyu.springtest'
@@ -124,5 +126,19 @@ sonar {
         property("sonar.projectKey", "springtest")
         property("sonar.projectName", "springtest")
         property("sonar.coverage.jacoco.xmlReportPaths", "build/jacoco/jacoco.xml")
+    }
+}
+
+spotless {
+    java {
+        googleJavaFormat()
+        // 사용하지 않은 import문 제거
+        removeUnusedImports()
+        // 2개 이상 있거나 이제 앞뒤로 불필요한 공백이 있을 때 제거해주는 옵션
+        trimTrailingWhitespace()
+        // 빈 줄 제거
+        indentWithSpaces(4)
+        // 줄은 공백으로 남아있을 수 있도록 항상 옵션을 걸어준다.
+        endWithNewline()
     }
 }
