--- a/.github/workflows/pull-request-test.yml
+++ b/.github/workflows/pull-request-test.yml
@@ -14,5 +14,15 @@ jobs:
       contents: read
       pull-requests: write
     steps:
-    - name: Git Checkout
-      uses: actions/checkout@v3.0.2
+      - name: Git Checkout
+        uses: actions/checkout@v3.0.2
+      - name: JDK install
+        uses: actions/setup-java@v3
+        with:
+          distribution: zulu
+          java-version: '17'
+          cache: 'gradle'
+
+      - name: Gradle Build
+        run: |
+          ./gradlew build --parallel
