--- a/.github/workflows/pull-request-test.yml
+++ b/.github/workflows/pull-request-test.yml
@@ -26,3 +26,15 @@ jobs:
       - name: Gradle Build
         run: |
           ./gradlew build --parallel
+
+#     Jacoco Report
+      - name: Coverage Report
+        uses: madrapps/jacoco-report@v1.6.1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          title: Code Coverage Report
+          update-comment: true
+          min-coverage-overall: 10
+          min-coverage-changed-files: 60
+          paths: |
+            ${{ github.workspace }}/**/build/jacoco/jacoco.xml
