--- a/.github/workflows/pull-request-test.yml
+++ b/.github/workflows/pull-request-test.yml
@@ -38,3 +38,19 @@ jobs:
           min-coverage-changed-files: 60
           paths: |
             ${{ github.workspace }}/**/build/jacoco/jacoco.xml
+
+  style-test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Git Checkout
+        uses: actions/checkout@v3.0.2
+      - name: JDK install
+        uses: actions/setup-java@v3
+        with:
+          distribution: zulu
+          java-version: '17'
+          cache: 'gradle'
+
+      - name: Checkstyle
+        run: |
+         ./gradlew spotlessCheck
