--- a/.github/workflows/pull-request-test.yml
+++ b/.github/workflows/pull-request-test.yml
@@ -36,6 +36,7 @@ jobs:
           cache: 'gradle'
 
       - name: Gradle Build
+        if: steps.changes.outputs.application == 'true'
         run: |
           ./gradlew build --parallel
 
