--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
+
+    // Validation
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
     implementation(platform("software.amazon.awssdk:bom:2.20.136"))
@@ -55,6 +59,8 @@ dependencies {
     testImplementation 'org.testcontainers:kafka:1.19.0'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
 
+    testCompileOnly 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
     testImplementation 'com.tngtech.archunit:archunit:1.1.0'
 }
 
